Almost have the JWT implemented.
